
[metadata]
name = tomopyui
url = https://github.com/samwelborn/tomopyui
author = Samuel Scott Welborn
author_email = swelborn@seas.upenn.edu


version = attr: tomopyui._version.__version__
description = A graphical user interface for tomopy.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD license
classifiers =
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/samwelborn/tomopyui

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
; install_requires =
    ; numpy

[options.extras_require]
testing =
    tox
    tox-conda
    pytest
    pytest-cov
    nbval
dev =
    ipython
    jedi<0.18.0
    black
    flake8
    flake8-docstrings
    isort
    mypy
    pre-commit
    pydocstyle
    pytest
doc =
    jupyter-sphinx >= 0.3.1
    myst-nb
    numpydoc
    Sphinx >= 2.0
    sphinx-book-theme
    sphinx-copybutton
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton



[bdist_wheel]
universal = 1



[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
# ignore =  D100, D213, D401, D413, D107, W503
