
[metadata]
name = tomopyui
url = https://github.com/samwelborn/tomopyui
author = Samuel Scott Welborn
author_email = swelborn@seas.upenn.edu
version = attr: tomopyui._version.__version__
description = A graphical user interface for tomopy.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD license
classifiers =
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/samwelborn/tomopyui

[options]
zip_safe = False
packages = find:
python_requires = >=3.7

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
# ignore =  D100, D213, D401, D413, D107, W503
